# Littlegreen-Humanoid-Lite

./: .gitignore  FROZEN_TREE_VALIDATION.json  MIGRATION_NOTES.md  README.md  README_TRACK1_V1_2_3_RESIDUAL.md  REFACTOR_IMPLEMENTATION.yaml  RENAME_AUDIT.md  TRACK1_V145S2_FORWARD_COM_NOTES.md  V10_TRAINING_NOTES.md  V10_VALIDATION_REPORT.md  V1_2_1_SMOKE_FIX.md  V1_2_2_CHANGES.md  V1_2_2_EXPERIMENT_GUIDE.md  V1_2_3_ACTION_CONTRACT.md  V1_2_3_BASELINE_GUIDE.md  V1_2_3_CHANGES.md  V1_2_3_NOMINAL_POSE_MEASUREMENT.json  V1_2_ACTION_CONTRACT.md  V1_2_CHANGES.md  V1_2_TRAINING_GUIDE.md  V1_3_0_ST3215_TASKS.md  V1_4_0_CHANGES.md  V1_4_0_ST3215_LOADED_TASKS.md  V1_4_1_HARDWARE_CURRICULUM.md  V1_4_2_LOCOMOTION_PRESSURE_GUIDE.md  V1_4_3_MOVE_NOW_GUIDE.md  V1_4_4_ALTERNATING_STEP_GUIDE.md  V1_4_5S3_NOTES.md  V1_4_5_ATHLETIC_CONTRACT.md  V1_4_5_STAND_STABILIZATION_GUIDE.md  V1_4_5_TRAINING_GUIDE.md  V1_4_6_ANTI_PLANTED_LOCOMOTION_GUIDE.md  V1_4_7_PHASE_GUIDED_HANDOFF.md  V9_TRAINING_NOTES.md  V9_VALIDATION_REPORT.md  VALIDATION_REPORT.md  VALIDATION_RESULTS.json  environment.yml  motor_configuration.json  pyproject.toml  (+1 more)
checkpoints/: policy_biped_25hz_a.onnx  policy_biped_25hz_b.onnx  policy_biped_50hz.onnx
configs/: policy_biped_25hz_a.yaml  policy_biped_25hz_b.yaml  policy_biped_50hz.yaml  policy_latest.yaml  policy_video.yaml
data/track1_actuator_identification_v2/: TRACK1_HANDOFF.md  track1_actuator_model.json  track1_actuator_model.yaml
data/track1_loaded_actuator_extension_v2/: TRACK1_STANDING_LOAD_HANDOFF_V2.md  track1_loaded_actuator_extension_v2.json  track1_loaded_actuator_extension_v2.yaml
docker/: .env.base  Dockerfile  docker-compose.yaml
scripts/: list_envs.py
scripts/rsl_rl/: analyze_policy_v10.py  analyze_policy_v1_2_3.py  analyze_policy_v1_3_0.py  analyze_policy_v1_4_0.py  analyze_policy_v1_4_3.py  analyze_policy_v1_4_4.py  analyze_policy_v1_4_5.py  analyze_policy_v1_4_7.py  analyze_policy_v1_4_8.py  analyze_policy_v9.py  cli_args.py  command_override.py  export_policy.py  export_policy_littlegreen.py  measure_nominal_pose.py  play.py  play_joystick.py  readme.md  train_eval.py  train_v10_from_stand3500.sh  train_v9_from_stand3500.sh
scripts/sim2real/: visualize.py
scripts/sim2sim/: play_mujoco.py
scripts/teleop/: check_connection.py  run_idle.py  run_teleop.py  test_gripper.py  test_solver.py
source/littlegreen_humanoid_lite/: README.md  pyproject.toml
source/littlegreen_humanoid_lite_assets/: .gitignore  Makefile  README.md  postprocess.py  pyproject.toml
source/littlegreen_humanoid_lite_assets/data/mjcf/: lilgreen_robot.xml  lilgreen_scene.xml  lilgreen_source.xml  littlegreen_scene.xml
source/littlegreen_humanoid_lite_assets/data/mjcf/assets/merged/: arm_left_elbow_pitch_visual.stl  arm_left_elbow_roll_visual.stl  arm_right_elbow_roll_visual.stl  leg_right_ankle_roll_visual.stl  leg_right_hip_roll_visual.stl
source/littlegreen_humanoid_lite_assets/data/mjcf/meshes/: IMU.stl  base_link (copy).stl
source/littlegreen_humanoid_lite_assets/data/scad/: aluminum_extrusion_100mm_center.scad  flat_foot.scad  geometry_stud_lowerarm.scad  geometry_stud_lowerleg.scad  geometry_stud_upperarm.scad  geometry_stud_upperleg.scad  left_shoe.scad
source/littlegreen_humanoid_lite_assets/data/urdf/: config.json
source/littlegreen_humanoid_lite_assets/data/urdf/assets/merged/: arm_left_shoulder_roll_visual.stl  arm_left_shoulder_yaw_visual.stl  base_visual.stl  leg_left_knee_pitch_visual.stl  leg_right_knee_pitch_visual.stl
source/littlegreen_humanoid_lite_assets/data/usd/: berkeley_humanoid_lite_biped.usd
source/littlegreen_humanoid_lite_assets/data/usd/configuration/: berkeley_humanoid_lite_biped_physics.usd  berkeley_humanoid_lite_biped_sensor.usd
source/littlegreen_humanoid_lite_assets/data/usd/to_urdf/: lilgreen_export.urdf
source/littlegreen_humanoid_lite_assets/data/usd/to_urdf/mesh/: leg_left_hip_pitch_visuals.mtl
source/littlegreen_humanoid_lite_assets/littlegreen_humanoid_lite_assets/: __init__.py
source/littlegreen_humanoid_lite_assets/littlegreen_humanoid_lite_assets/robots/: __init__.py  berkeley_humanoid_lite.py  lilgreen_humanoid copy.py  lilgreen_humanoid.py  littlegreen_humanoid_lite.py
source/littlegreen_humanoid_lite_lowlevel/: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt  robot_configuration.backup.json
source/littlegreen_humanoid_lite_lowlevel/checkpoints/: .gitkeep
source/littlegreen_humanoid_lite_lowlevel/configs/: .gitkeep
source/littlegreen_humanoid_lite_lowlevel/csrc/: consts.h  imu.cpp  imu.h  loop_function.h  main.cpp  metal.h  motor_controller.cpp  motor_controller.h  motor_controller_conf.h  real_humanoid.cpp  real_humanoid.h  serializer.c  serializer.h  socketcan.cpp  socketcan.h  udp.c  udp.h
source/littlegreen_humanoid_lite_lowlevel/ctests/: test-imu.cpp  test-torch.cpp  test-udp.cpp  test-yaml.cpp
source/littlegreen_humanoid_lite_lowlevel/imu/bno085_arduino/: bno085_arduino.ino
source/littlegreen_humanoid_lite_lowlevel/littlegreen_humanoid_lite_lowlevel/: __init__.py
source/littlegreen_humanoid_lite_lowlevel/littlegreen_humanoid_lite_lowlevel/policy/: __init__.py  config.py  gamepad.py  rl_controller.py  rl_controller_lilgreen.py  udp_joystick copy.py  udp_joystick_sm.py
source/littlegreen_humanoid_lite_lowlevel/littlegreen_humanoid_lite_lowlevel/recoil/: __init__.py  can.py  core.py  fixed16.py  util.py
source/littlegreen_humanoid_lite_lowlevel/littlegreen_humanoid_lite_lowlevel/robot/: __init__.py  bimanual.py  humanoid.py  imu.py
source/littlegreen_humanoid_lite_lowlevel/scripts/: calibrate_joints.py  check_connection.py  run_idle.py  run_locomotion.py  start_can_transports.sh  stop_can_transports.sh  test_imu.py  test_inference.py  test_joystick.py
source/littlegreen_humanoid_lite_lowlevel/scripts/motor/: calibrate_electrical_offset.py  configure_parameter.py  move_actuator.py  ping.py  read_configurations.py
source/littlegreen_humanoid_lite_lowlevel/scripts/robot/: read_configurations.py  write_configurations.py
(+71 files in other folders)
