[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littlegreen_humanoid_lite_assets"
version = "2.0.0"
description = "Description files for Littlegreen Humanoid Lite"
authors = [
    { name = "Berkeley Humanoid Project Developers" },
    { name = "-T.K.-" },
]
maintainers = [
    { name = "Berkeley Humanoid Project Developers" },
    { name = "-T.K.-" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["robotics", "isaaclab"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Isaac Sim :: 4.5.0",
]
dependencies = [
    "psutil",
]

[project.urls]
upstream = "https://github.com/HybridRobotics/Berkeley-Humanoid-Lite-Assets"

[tool.setuptools]
packages = ["littlegreen_humanoid_lite_assets"]
zip-safe = false 